--- a/Dockerfile.static
+++ b/Dockerfile.static
@@ -13,16 +13,16 @@ COPY ./ /conteco/repo/
 
 ##### BEGIN image/Dockerfile/env-labels-footer #####
 ENV CONTECO_TYPE="module" \
-    CONTECO_NAME="schema_registry_tocloud" \
+    CONTECO_NAME="schema_registry_sasl" \
     CONTECO_TAG="5.4.0" \
     CONTECO_BASE="image.wrapper" \
     CONTECO_BUILD="image"
 LABEL io.vcweb.type="module" \
-      io.vcweb.name="schema_registry_tocloud" \
+      io.vcweb.name="schema_registry_sasl" \
       io.vcweb.tag="5.4.0" \
       io.vcweb.base="image.wrapper" \
       io.vcweb.build="image" \
-      io.vcweb.label="module.schema_registry_tocloud - ContEco" \
-      io.vcweb.description="The ContEco Confluent Schema Registry to cloud module with managed standard URL." \
-      io.vcweb.docker.cmd.help="docker run vcwebio/conteco.module.schema_registry_tocloud --help"
+      io.vcweb.label="module.schema_registry_sasl - ContEco" \
+      io.vcweb.description="The ContEco Confluent Schema Registry module. wtih SASL authentication." \
+      io.vcweb.docker.cmd.help="docker run vcwebio/conteco.module.schema_registry_sasl --help"
 ##### END image/Dockerfile/env-labels-footer #####
