--- a/conteco/docker-compose/environment.template
+++ b/conteco/docker-compose/environment.template
@@ -1,9 +1,9 @@
 #!/usr/bin/env bash
 
 # START SETTINGS schema_registry.base
-export CONTECO_DC_KSQL_SERVER_ENVIRONMENT_CONNECT_CLOUD_BOOTSTRAP_SERVERS=
-export CONTECO_DC_KSQL_SERVER_ENVIRONMENT_CONNECT_SASL_JAAS_CONFIG_CLUSTER_API_KEY=
-export CONTECO_DC_KSQL_SERVER_ENVIRONMENT_CONNECT_SASL_JAAS_CONFIG_CLUSTER_API_SECRET=
+#export CONTECO_DC_SCHEMA_REGISTRY_ENVIRONMENT_CONNECT_CLOUD_BOOTSTRAP_SERVERS=
+#export CONTECO_DC_SCHEMA_REGISTRY_ENVIRONMENT_CONNECT_SASL_JAAS_CONFIG_CLUSTER_API_KEY=
+#export CONTECO_DC_SCHEMA_REGISTRY_ENVIRONMENT_CONNECT_SASL_JAAS_CONFIG_CLUSTER_API_SECRET=
 export CONTECO_DC_SCHEMA_REGISTRY_PORTS="8081:8081"
 export CONTECO_DC_SCHEMA_REGISTRY_LABELS=
 export CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_LABELS=
